ProyectoFinal/force-app/main/default/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedAmount__c</fullName>
        <label>Estimated Amount</label>
        <summarizedField>ProjectLineItem__c.EstimatedAmountXRole__c</summarizedField>
        <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <label>Estimated Hours</label>
        <summarizedField>ProjectLineItem__c.EstimatedHours__c</summarizedField>
        <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Squad Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProjectResource__c.ProjectLineItem__r.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectResource__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Alias__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Opportunity__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Opportunity__r.Project_Manager__r.FirstName &amp; &quot;, &quot; &amp; Opportunity__r.Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SquadLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Squad Lead User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Kickoff</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>ProjectLineItem__c.AmountxRole__c</summarizedField>
        <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tasks_Completed__c</fullName>
        <label>Total Tasks Completed</label>
        <summaryFilterItems>
            <field>Project_Task__c.State__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tasks__c</fullName>
        <label>Total Tasks</label>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Alias__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>ProjectResource__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Earnings_vs_Losses</fullName>
        <active>false</active>
        <errorConditionFormula>Amount__c  &lt;  EstimatedAmount__c</errorConditionFormula>
        <errorMessage>The project is in loss, please check the estimated amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hours_Not_Covered</fullName>
        <active>false</active>
        <errorConditionFormula>EstimatedHours__c  &lt;  Opportunity__r.TotalOpportunityQuantity</errorConditionFormula>
        <errorMessage>The hours have not been covered, please complete the assignment of resources.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Editing_Allow_While_In_Progress</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ), &quot;In Progress&quot;)</errorConditionFormula>
        <errorMessage>A project can not be update while is in &apos;In Progress&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Squad_Lead_Assigned</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( ProjectResource__c  )</errorConditionFormula>
        <errorMessage>Please assign a Squad Lead to the project</errorMessage>
    </validationRules>
</CustomObject>