ProyectoFinal/force-app/main/default/objects/Project__c/fields/Opportunity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Hours__c</fullName>
    <label>Opportunity Hours</label>
    <summarizedField>ProjectLineItem__c.QuantityHours__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>