ProyectoFinal/force-app/main/default/objects/Project__c/fields/Selected_Squad_Lead__c.field-meta.xml
<CustomField>
    <fullName>Selected_Squad_Lead__c</fullName>
    <formula>ProjectResource__r.User__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Squad Lead</label>
    <type>Text</type>
</CustomField>