ProyectoFinal/force-app/main/default/objects/Project__c/fields/Whoami__c.field-meta.xml
<CustomField>
    <fullName>Whoami__c</fullName>
    <formula>if(Project_Manager__c =   $User.FirstName  &amp; &quot;, &quot; &amp;  $User.LastName,  TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Whoami</label>
    <type>Checkbox</type>
</CustomField>