ProyectoFinal/force-app/main/default/objects/Project__c/validationRules/Earnings_vs_Losses.validationRule-meta.xml
<ValidationRule>
    <fullName>Earnings_vs_Losses</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c  &lt;  EstimatedAmount__c</errorConditionFormula>
    <errorMessage>The project is in loss, please check the estimated amount.</errorMessage>
</ValidationRule>