ProyectoFinal/force-app/main/default/objects/Project__c/validationRules/Hours_Not_Covered.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Not_Covered</fullName>
    <active>false</active>
    <errorConditionFormula>EstimatedHours__c  &lt;  Opportunity__r.TotalOpportunityQuantity</errorConditionFormula>
    <errorMessage>The hours have not been covered, please complete the assignment of resources.</errorMessage>
</ValidationRule>