ProyectoFinal/force-app/main/default/objects/Project__c/validationRules/Not_Editing_Allow_While_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Editing_Allow_While_In_Progress</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ), &quot;In Progress&quot;)</errorConditionFormula>
    <errorMessage>A project can not be update while is in &apos;In Progress&apos;</errorMessage>
</ValidationRule>