ProyectoFinal/force-app/main/default/objects/Project__c/validationRules/Squad_Lead_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Squad_Lead_Assigned</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( ProjectResource__c  )</errorConditionFormula>
    <errorMessage>Please assign a Squad Lead to the project</errorMessage>
</ValidationRule>