ProyectoFinal/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project_Alias__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>EstimatedHours__c</columns>
    <columns>EstimatedAmount__c</columns>
    <columns>TotalCost__c</columns>
    <columns>Selected_Squad_Lead__c</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>